<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:fitsSystemWindows="true"
    tools:context=".ShowActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txt_data_car"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageShow"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/img_ex_car" />

            <LinearLayout
                style="@style/Linear"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_brand"
                    style="@style/title"
                    android:text="@string/txt_brand" />
                <TextView
                    android:id="@+id/text_show_brand"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_model"
                    style="@style/title"
                    android:text="@string/txt_model" />
                <TextView
                    android:id="@+id/text_show_model"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_year"
                    style="@style/title"
                    android:text="@string/txt_year" />
                <TextView
                    android:id="@+id/text_show_year"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_price"
                    style="@style/title"
                    android:text="@string/txt_price" />
                <TextView
                    android:id="@+id/text_show_price"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_color"
                    style="@style/title"
                    android:text="@string/txt_color" />
                <TextView
                    android:id="@+id/text_show_color"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_gearType"
                    style="@style/title"
                    android:text="@string/txt_gearType" />
                <TextView
                    android:id="@+id/text_show_gearType"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_fuelType"
                    style="@style/title"
                    android:text="@string/txt_fuelType" />
                <TextView
                    android:id="@+id/text_show_fuelType"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_doors"
                    style="@style/title"
                    android:text="@string/txt_doors" />

                <TextView
                    android:id="@+id/text_show_doors"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                style="@style/Linear"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_seats"
                    style="@style/title"
                    android:text="@string/txt_seats" />

                <TextView
                    android:id="@+id/text_show_seats"
                    style="@style/show"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_back"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>